--- a/01-Python-Basics.ipynb
+++ b/01-Python-Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "384c0d14-7f54-4253-a7fd-c75d6668127a",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world....\n"
+      "hello world....\n",
+      "Hello, Ehtesham!\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world....\") "
+    "print(\"hello world....\") \n",
+    "def greet(name):\n",
+    "    return f\"Hello, {name}!\"\n",
+    "\n",
+    "print(greet(\"Ehtesham\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f1f653d-c165-4464-ae9e-c0bc27d6cefe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
